tests/errors/sem_assignment_array.kt
fun main() {
    val arr1: Array<Int> = arrayOf(1, 2, 3)
    val arr2: Array<String> = arr1
}
